Minor code revisions and add key check